se rediseño el endpont especialidades y se agrego swagger
